CSS backface-visibility fix on animation

--- a/public/css/gifj.css
+++ b/public/css/gifj.css
@@ -43,6 +43,11 @@ html, body
 	visibility: hidden;
 }
 
+.tween-fix
+{
+	backface-visibility: hidden;
+}
+
 .channel
 {
 	position: absolute;
